tests/negative/gold/underscore_test.gold
tests/negative/underscore_test.toit:22:7: error: Can't use '_' as name for a class
class _:
      ^
tests/negative/underscore_test.toit:36:1: error: Can't use '_' as name for a field
_ := 42
^
tests/negative/underscore_test.toit:38:1: error: Can't use '_' as name for a method
_= x:
^
tests/negative/underscore_test.toit:25:3: error: Can't use '_' as name for a field
  _ := 499
  ^
tests/negative/underscore_test.toit:27:10: error: Can't use '_' as name for a method
  static _:
         ^
tests/negative/underscore_test.toit:28:3: error: Can't use '_' as name for a method
  _ x:
  ^
tests/negative/underscore_test.toit:30:10: error: Can't use '_' as name for a field
  static _ := 42
         ^
tests/negative/underscore_test.toit:32:15: error: Can't use '_' as name for a constructor
  constructor._:
              ^
tests/negative/underscore_test.toit:34:3: error: Can't use '_' as name for a method
  _= x:
  ^
tests/negative/underscore_test.toit:7:10: error: Can't reference '_'
  return _
         ^
tests/negative/underscore_test.toit:14:12: error: Can't reference '_'
    return _
           ^
tests/negative/underscore_test.toit:16:5: error: Can't reference '_'
    _
    ^
tests/negative/underscore_test.toit:19:3: error: Can't use '_' as name for a local variable
  _ := 499
  ^
tests/negative/underscore_test.toit:20:10: error: Can't reference '_'
  return _
         ^
tests/negative/underscore_test.toit:41:3: error: Can't reference '_'
  _
  ^
Compilation failed.
